--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.codelixir.kommand.MainActivity"
+            android:name=".MainActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.Dialog" >
@@ -31,6 +31,24 @@
                 </category>
             </intent-filter>
         </activity>
+        <activity android:name=".WidgetActivity" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+
+        <!-- Broadcast Receiver that will process AppWidget updates -->
+        <receiver
+            android:name=".LiveWidget"
+            android:label="@string/widget_label" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/livewidget" />
+        </receiver>
 
         <receiver android:name="com.codelixir.kommand.GoogleSearchReceiver" >
             <intent-filter>
