--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         <!-- Broadcast Receiver that will process AppWidget updates -->
         <receiver
-            android:name=".LiveWidget"
+            android:name=".Widget"
             android:label="@string/widget_label" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
