--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-# built application files
-*.apk
-*.ap_
-
-# files for the dex VM
-*.dex
-
-# Java class files
-*.class
-
-# generated files
-bin/
-gen/
-obj/
-libs/
-
+# Built application files
+build/
+ 
+# Crashlytics configuations
+com_crashlytics_export_strings.xml
+ 
 # Local configuration file (sdk path, etc)
 local.properties
-
-# Eclipse project files
-.classpath
-.project
-/out
+ 
+# Gradle generated files
+.gradle/
+ 
+# Signing files
+.signing/
+ 
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
