--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,38 +2,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codelixir.kommand"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
+
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="com.mohammadag.googlesearchapi.permission.ACCESS_GGOGLE_SEARCH_API" />
 
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="16" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Dialog" >
+            android:theme="@android:style/Theme.DeviceDefault.Dialog">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" >
-                </action>
+                <action android:name="android.intent.action.MAIN"></action>
 
-                <category android:name="android.intent.category.LAUNCHER" >
-                </category>
+                <category android:name="android.intent.category.LAUNCHER"></category>
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER"></category>
             </intent-filter>
         </activity>
         <activity
+            android:name=".SettingsActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.DeviceDefault"></activity>
+        <activity
             android:name=".WidgetActivity"
-            android:theme="@android:style/Theme.Holo.Dialog" >
+            android:theme="@android:style/Theme.DeviceDefault.Dialog">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
@@ -42,7 +46,7 @@
         <!-- Broadcast Receiver that will process AppWidget updates -->
         <receiver
             android:name=".Widget"
-            android:label="@string/widget_label" >
+            android:label="@string/widget_label">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -51,14 +55,14 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget" />
         </receiver>
-        <receiver android:name="com.codelixir.kommand.GoogleSearchReceiver" >
+        <receiver android:name=".GoogleSearchReceiver">
             <intent-filter>
                 <action android:name="com.mohammadag.googlesearchapi.NEW_SEARCH" />
             </intent-filter>
-        </receiver>        
+        </receiver>
         <receiver
             android:name=".GestureReceiver"
-            android:label="@string/widget_label" >
+            android:label="@string/widget_label">
             <intent-filter>
                 <action android:name="com.ceco.wakegestures.GESTURE" />
             </intent-filter>
