--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.codelixir.kommand"
-        minSdkVersion 16
-        targetSdkVersion 16
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
@@ -19,6 +20,5 @@ android {
 }
 
 dependencies {
-    compile 'com.google.code.gson:gson:2.5'
-    compile 'com.koushikdutta.async:androidasync:2.+'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
