--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codelixir.kommand"
-    android:versionCode="2"
-    android:versionName="1.1">
+    package="com.codelixir.kommand">
 
-    <uses-sdk android:targetSdkVersion="16" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -20,11 +23,12 @@
         android:banner="@drawable/banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"        >
         <activity
             android:name=".MainActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
+            android:launchMode="singleInstance"
             android:theme="@android:style/Theme.DeviceDefault.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"></action>
@@ -34,11 +38,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:launchMode="singleInstance"
             android:name=".SettingsActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.DeviceDefault"></activity>
         <activity
+            android:launchMode="singleInstance"
             android:name=".WidgetActivity"
             android:theme="@android:style/Theme.DeviceDefault.Dialog">
             <intent-filter>
